Project Tool Added

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://cmb.test
 
+PROJECT_TOOL_PROVIDER=Jira
+PROJECT_TOOL_URL=https://luigelo-applus.atlassian.net/browse/CMB
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
